tf-aws-basicInfrastructure/vpc.tf
## Demo VPC
resource "aws_vpc" "terraform-demo-vpc" {
    cidr_block               = "10.0.0.0/16"
    instance_tenancy         = "default"
    enable_dns_support       = "true"
    enable_dns_hostnames     = "true"
    enable_classiclink       = "false"
    tags = {
        Name = "terraform-demo-vpc"
    }
}
